--- a/output/app/index.html
+++ b/output/app/index.html
@@ -4,12 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <!-- <link rel="preload" as="script" href="js/shared.js"> -->
         <link rel="preload" as="script" href="js/shared.js">
         <link rel="preload" as="script" href="js/main.js">
-        <!-- <link rel="preload" as="script" href="js/plotly.js">
-             <link rel="preload" as="script" href="js/reporting.js">
-        -->
     </head>
   <body>
     <div id="app">
@@ -18,14 +14,12 @@
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
       </div>
-      <h2>AI Fund</h2>
+      <h2>Hack Zürich</h2>
       <div class="loading">Test for loading</div>
     </div>
 
     <script src="js/shared.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 
-    <!-- <script src="js/reporting.js" type="text/javascript"></script>
-         <script src="js/plotly.js" type="text/javascript"></script> -->
   </body>
 </html>
