--- a/output/app/index.html
+++ b/output/app/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Neo The Doubtful</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="icon" type="image/png" href="img/icon32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="img/icon16.png" sizes="16x16">
         <link rel="preload" as="script" href="js/shared.js">
         <link rel="preload" as="script" href="js/main.js">
     </head>
